<resources>
    <string name="app_name" >LeYoTown</string>
    <string name="main_home" >Home</string>
    <string name="main_course">Course</string>
    <string name="main_my">My</string>
    <string name="course_arrangement">Course arrangement</string>
    <string name="useing_help">User guide</string>
    <string name="complaint_proposal">Suggestion</string>
    <string name="bind_account">Link account</string>
    <string name="contact_us">Contact Us</string>
    <string name="essential_information">Edit profile</string>
    <string name="my_order">My Order</string>
    <string name="my_coupon">My Coupon</string>
    <string name="coupon">Coupon</string>
    <string name="exclusive_coupons">Exclusive coupons</string>
    <string name="my_collections">My Colletion</string>
    <string name="my_attentions">My Attention</string>
    <string name="my_service">My Service</string>
    <string name="my_collection">" Collections"</string>
    <string name="collection">collection</string>
    <string name="collectioned">collectioned</string>
    <string name="my_attention">" Attentions"</string>
    <string name="follow">Follow</string>
    <string name="abolish_concern">Unfollow</string>
    <string name="pending_payment">Pending payment</string>
    <string name="complete_the_order">Complete The Order</string>
    <string name="comprehensive_evaluation">reviews</string>
    <string name="no_login">Not logged in</string>
    <string name="mailbox_account">Mailbox account</string>
    <string name="register">Register</string>
    <string name="change_pwd">Change Password</string>
    <string name="login_name">Please enter E-mail</string>
    <string name="welcome_tips">Hello, welcome to Simpleryo</string>
    <string name="edit_account">Please enter the phone/E-mail</string>
    <string name="edit_pwd">Please input a password</string>
    <string name="sign_in">Log in</string>
    <string name="no_register_click" ><u>Non-registered users please click</u></string>
    <string name="register_click" >Register</string>
    <string name="forget_the_password" >Forget the password?</string>
    <string name="course_price">person</string>
    <string name="my_msg">My news</string>
    <string name="all_course">All courses</string>
    <string name="reservations">Reservations</string>
    <string name="institutional_recommendation">Institutional Recommendation</string>
    <string name="coaching_information">Tutor’s profile</string>
    <string name="institutional_information">Organisation information</string>
    <string name="qualification_certificate">Qualification certificate</string>
    <string name="business_home">Organization details</string>
    <string name="certified">Certified</string>
    <string name="to_be_audited">To be audited</string>
    <string name="not_through">Not through</string>
    <string name="confirmation_of_order">Confirmation of order</string>
    <string name="confirmation_of_payment">Confirmation of payment</string>
    <string name="course_of_price">Course price：</string>
    <string name="total_course">Total price：</string>
    <string name="purchase_quantity">Purchase quantity：</string>
    <string name="reservation">Reserved name：</string>
    <string name="cell_phone_number">Mobile number：</string>
    <string name="remarks">Commance：</string>
    <string name="Booking_time">Booking time：</string>
    <string name="mechanism">Mechanism</string>
    <string name="notice">Notice</string>
    <string name="personal_center">My Profile</string>
    <string name="share">Share</string>
    <string name="historical_records">Historical records</string>
    <string name="course_detail">CoueseDetail</string>
    <string name="exit">Log out</string>
    <string name="no_data">There is no more data on this page</string>
    <string name="no_orders">No course orders</string>
    <string name="Popular_Course">Popular Course</string>
    <string name="Luxury_Course">Luxury Course</string>
    <string name="Recommended_Course">Recommended Course</string>
    <string name="his_her_tutor">His/Her tutor</string>
    <string name="his_her_coupons">His/Her coupons</string>
    <string name="his_her_course">His/Her courses</string>
    <string name="offline_training">Offline training</string>
    <string name="tutor">Tutor</string>
    <string name="full_price">Full price</string>
    <string name="User_Name">User Name</string>
    <string name="Gender">Gender</string>
    <string name="Link_Email">Email address</string>
    <string name="Contact_address">Home address</string>
    <string name="Constellation">Constellation</string>
    <string name="Personal_Profile">Bio</string>
    <string name="Change_nickname">Change nickname</string>
    <string name="new_nickname">Please enter new nickname</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="his_her_profile">His/Her profile</string>
    <string name="share_title">I recommended a good course in leyoutang</string>
    <string name="free_trail_booking">Free trail booking</string>
    <string name="free_trail">Free trail</string>
    <string name="book_time">Please select a booking time</string>
    <string name="offline_training_training_address">Details: offline：</string>
    <string name="exit_tips">Are you sure you want to quit?</string>
    <string name="Favorable_rate">Favorable rate</string>
    <string name="Book_a_course">Book a course</string>
    <string name="Purchase_a_course">Purchase a course</string>
    <string name="See_details">See details</string>
    <string name="To_evaluate">To evaluate</string>
    <string name="To_pay">Pay now</string>
    <string name="Cancel_order">Cancel Booking</string>
    <string name="All_reviews">All reviews</string>
    <string name="Describe_your_experience">Describe your experience(1-244 characters)</string>
    <string name="Grade">Grade:</string>
    <string name="Attended">Attended</string>
    <string name="Payment_done">Payment done</string>
    <string name="Cancelled">Cancelled</string>
    <string name="Edit_appointment_time">Edit appointment time</string>
    <string name="Order_number">Booking number</string>
    <string name="Course_name">Course name</string>
    <string name="Organisation">Organisation</string>
    <string name="Timetable">Timetable：</string>
    <string name="Order_detail">Order detail</string>
    <string name="On_site">On site</string>
    <string name="Payment_successful">Payment successful</string>
    <string name="Payment_cancle">You have cancelled your order</string>
    <string name="Payment_error">Unexpected error has happened, please contact customer service</string>
    <string name="Total_amount_of_the_order">Total amount of the order</string>
    <string name="Price_per_course">Price per course</string>
    <string name="Purchase_quantities">Purchase quantities</string>
    <string name="Reserved_name">Reserved name</string>
    <string name="Mobile_number">Mobile number</string>
    <string name="commant">Commant</string>
    <string name="Waiting_for_payment">Waiting for payment</string>
    <string name="View_evaluation">View evaluation</string>
    <string name="Successful_trade">Successful trade</string>
    <string name="List_of_courses">List of courses</string>
    <string name="More">More</string>
    <string name="Add_new_address">Add new address</string>
    <string name="Contact_person">Contact person</string>
    <string name="Full_name">Full name</string>
    <string name="Phone_number">Phone number</string>
    <string name="Address">Address</string>
    <string name="Flat_number">Flat number</string>
    <string name="Delivery_address">Delivery address</string>
    <string name="room">E.g. unit 2, room 301</string>
    <string name="Please_enter_your_profile">Please enter your profile</string>
    <string name="My_courses">My courses</string>
    <string name="Course_has_started">Course has started</string>
    <string name="Course_has_finished">Course has finished</string>
    <string name="Finished">Finished</string>
    <string name="Sessions">Sessions</string>
    <string name="Completed">Completed</string>
    <string name="No_course_name">No course name</string>
    <string name="Cancle">Cancle</string>
    <string name="Photograph">Photograph</string>
    <string name="Album">Album</string>
    <string name="Please_enter_your_feedback">Please enter your feedback</string>
    <string name="Linked">Linked</string>
    <string name="Unlink">Unlink</string>
    <string name="Unsubscribe">Unsubscribe</string>
    <string name="Unsubscribe_successful">Unsubscribe successful</string>
    <string name="You_have_followed">You have followed</string>
    <string name="Training_style">Training style</string>
    <string name="Training_time">Timetable</string>
    <string name="Tutor_name">Tutor name</string>
    <string name="experience">of experience</string>
    <string name="Required_name">Required, name</string>
    <string name="Required_phone">Required, facilitate business contact</string>
    <string name="search_content">Please enter the content to search</string>
    <string name="verification_code">Input verification code</string>
    <string name="password">Please input a password</string>
    <string name="comfirm_password">Please confirm the input password</string>
    <string name="phone_number">Please enter the phone number beginning with 02</string>
    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="facebook_app_id">2121752104719489</string>
</resources>
