<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/iv_login_backgroud"
    android:orientation="vertical"
    android:paddingLeft="80px"
    android:paddingRight="80px">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="205px"
        android:text="Welcome"
        android:textColor="@color/color_ffffff"
        android:textSize="43px" />

    <ImageView
        android:layout_width="228px"
        android:layout_height="147px"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18px"
        android:src="@mipmap/iv_login_top" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48px"
        android:text="@string/welcome_tips"
        android:textColor="@color/color_ffffff"
        android:textSize="31px" />

    <LinearLayout
        android:layout_width="490px"
        android:layout_height="62px"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="39px"
        android:background="@drawable/shape_edittext"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="11px"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/iv_login_phone" />

        <EditText
            android:id="@+id/edittext_account"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/edit_account"
            android:textSize="12sp"
            android:paddingLeft="15px" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="490px"
        android:layout_height="62px"
        android:layout_marginTop="39px"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/shape_edittext"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="11px"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/iv_login_pwd" />

        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/edit_pwd"
            android:singleLine="true"
            android:paddingLeft="15px"
            android:textSize="12sp"
            android:inputType="textPassword" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="490px"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="37px">

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_click"
            android:textColor="@color/color_ffffff"
            android:textSize="24px" />
        <TextView
            android:id="@+id/forget_the_password"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:textColor="@color/color_ffffff"
            android:text="@string/forget_the_password"
            android:textSize="24px"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <TextView
        android:id="@+id/tv_login"
        android:layout_width="490px"
        android:layout_height="wrap_content"
        android:paddingRight="46px"
        android:layout_marginTop="70px"
        android:paddingLeft="46px"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="10px"
        android:paddingTop="10px"
        android:background="@drawable/shape_login"
        android:gravity="center"
        android:textSize="31px"
        android:text="@string/sign_in"
        android:textColor="@color/color_ffffff" />
</LinearLayout>
