<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300px"
        android:layout_marginLeft="50px"
        android:layout_marginRight="50px"
        android:background="@drawable/shape_my"
        android:orientation="vertical"
        android:paddingLeft="50px"
        android:paddingRight="50px">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50px"
            android:text="@string/exit_tips"
            android:textSize="21sp" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="250px"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="50px"
            android:background="@drawable/shape_cancel"
            android:gravity="center"
            android:paddingBottom="15px"
            android:paddingTop="15px"
            android:text="@string/no"
            android:textColor="@color/color_ffffff" />

        <TextView
            android:id="@+id/tv_sure"
            android:layout_width="250px"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="50px"
            android:background="@drawable/shape_register"
            android:gravity="center"
            android:paddingBottom="15px"
            android:paddingTop="15px"
            android:text="@string/yes"
            android:textColor="@color/color_ffffff" />
    </RelativeLayout>
</LinearLayout>
