<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ffffff"
    android:orientation="vertical">

    <include layout="@layout/common_top_layout" />

    <RadioGroup
        android:id="@+id/radio_group_main"
        android:layout_width="match_parent"
        android:layout_height="56px"
        android:layout_marginLeft="50px"
        android:layout_marginRight="50px"
        android:layout_marginTop="29px"
        android:background="@drawable/shape_business_radio_group"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_btn_my_course"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2px"
            android:layout_marginLeft="5px"
            android:layout_marginTop="2px"
            android:layout_weight="1"
            android:background="@drawable/selector_business_radio_course"
            android:button="@null"
            android:gravity="center"
            android:text="@string/Popular_Course"
            android:textColor="@color/selector_my_course_radio_text_color" />

        <RadioButton
            android:id="@+id/radio_btn_course"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2px"
            android:layout_marginLeft="1px"
            android:layout_marginTop="2px"
            android:layout_weight="1"
            android:background="@drawable/selector_my_course_started"
            android:button="@null"
            android:gravity="center"
            android:text="@string/Luxury_Course"
            android:textColor="@color/selector_my_course_radio_text_color" />

        <RadioButton
            android:id="@+id/radio_btn_coach"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2px"
            android:layout_marginRight="5px"
            android:layout_marginTop="2px"
            android:layout_weight="1"
            android:background="@drawable/selector_my_course_end"
            android:button="@null"
            android:gravity="center"
            android:text="@string/Recommended_Course"
            android:textColor="@color/selector_my_course_radio_text_color" />
    </RadioGroup>

    <com.simpleryo.leyotang.view.NoScrollViewPager
        android:id="@+id/view_pager_main"
        android:layout_width="match_parent"
        android:layout_marginBottom="50px"
        android:layout_marginLeft="50px"
        android:layout_marginRight="50px"
        android:layout_marginTop="28px"
        android:layout_height="match_parent"></com.simpleryo.leyotang.view.NoScrollViewPager>
</LinearLayout>
